# GtkToolbar

./: README.md  meson.build  org.example.App.json
data/: meson.build  org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: gtktoolbar.gresource.xml  gtktoolbar.in  main.py  main_window.py  meson.build  toolbar_builder.ui  window.ui
